--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ repositories {
 }
 
 dependencies {
+    // gson
+    // https://github.com/google/gson
+    implementation 'com.google.code.gson:gson:2.9.0'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
